--- a/Angular8/demo/src/app/components/navbar/navbar.component.html
+++ b/Angular8/demo/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+
+
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-dark">
+  <a class="navbar-brand text-white" href="#">
+    <img src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+
+    {{ dataService.nombreUsuario }}
+  </a>
+</nav>
