--- a/Angular8/demo/src/app/pages/home/home.component.html
+++ b/Angular8/demo/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<h1>Home Component</h1>
+
+<br>
+
+<h3>{{ nombre }}</h3>
+
+<button class="btn btn-primary"
+    (click)="cambiarNombre()">
+    Cambiar nombre 
+</button>
+
+
+<hr>
+<app-hijo [nombreHijo]="nombre" 
+            (cambioNombreHijo)="hijoCambioNombre( $event )"></app-hijo>
